--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
 body {
     font-family: 'Lato', sans-serif;
+    margin: 0%;
+   
 }
+
 h1 {
     font-size: 50px;
 }
-.name {
+
+h2 {
+    font-size: 40px;
+}
+
+
+p {
+    color: darkslategrey;
+    font-size: 18px;
+}
+
+.highlight-header {
     color:rgb(220, 20, 120);
 }
 .welcome {
@@ -18,5 +32,72 @@ h1 {
 
 }
 .half-width img {
-    width: 90%;
+    width: 80%;
+}
+.top-banner {
+   background-image: url("images/top-banner.png");
+   background-repeat: no-repeat;
+}
+
+section {
+    height: 500px;
+    padding-bottom: 150px;
+}
+
+.link-button {
+    text-decoration: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    background-image: linear-gradient(45deg, orange,red);
+    color: white;
+    font-weight: bold;
+}
+.Dream {
+
+    color: rgb(74, 74, 131);
+}
+
+.dream-background  {
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+    
+}
+
+.experience-area {
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+    
+}
+.single-experience {
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 5px;
+    height: 80%;
+    background-color: white;
+}
+#full-stack {
+
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, purple, orange);
+    border-image-slice: 1;
+    padding-right: 20px;
+}
+
+#baby-web {
+
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, green, violet);
+    border-image-slice: 1;
+}
+
+ footer p{
+
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+
+ }
+#exp {
+    color: darkmagenta;
 }
